VPC-Formation.json
{
	"Description": "This template deploys a VPC, with a pair of public and private subnets spread across two Availability Zones. It deploys an Internet Gateway, with a default  route on the public subnets. It deploys a pair of NAT Gateways (one in each AZ),  and default routes for them in the private subnets.",
	"Parameters": {
		"EnvironmentName": {
			"Description": "AWS WP POC",
			"Type": "String"
		},
		"VpcCIDR": {
			"Description": "VPC CIDR 10.192.0.0/16",
			"Type": "String",
			"Default": "10.192.0.0/16"
		},
		"PublicSubnet1CIDR": {
			"Description": "Public Subnet -1 CIDR 10.192.10.0/24 in first AZ",
			"Type": "String",
			"Default": "10.192.10.0/24"
		},
		"PublicSubnet2CIDR": {
			"Description": "Public Subnet -1 CIDR 10.192.10.0/24 in second AZ",
			"Type": "String",
			"Default": "10.192.11.0/24"
		},
		"PrivateSubnet1CIDR": {
			"Description": "Private Subnet -1 CIDR 10.192.20.0/24 in first AZ",
			"Type": "String",
			"Default": "10.192.20.0/24"
		},
		"PrivateSubnet2CIDR": {
			"Description": "Private Subnet -1 CIDR 10.192.21.0/24 in second AZ",
			"Type": "String",
			"Default": "10.192.21.0/24"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {"Ref": "VpcCIDR"},
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"Tags": [{"Key": "Name", "Value": "WP-VPC"}]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{ "Key": "Name", "Value": {"Ref": "EnvironmentName"}}]
			}
		},
		"InternetGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"InternetGatewayId": {"Ref": "InternetGateway"},
				"VpcId": {"Ref": "VPC"}
			}
		},
		"PublicSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"AvailabilityZone": {"Fn::Select": [ "0", {"Fn::GetAZs": "us-west-2"} ]},
				"CidrBlock": {"Ref": "PublicSubnet1CIDR"},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Fn::Sub": "${EnvironmentName} Public Subnet (AZ1)"}
					}
				]
			}
		},
		"PublicSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"AvailabilityZone": {"Fn::Select": [ "1", {"Fn::GetAZs": "us-west-2"} ]},
				"CidrBlock": {"Ref": "PublicSubnet2CIDR"},
				"MapPublicIpOnLaunch": true,
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Fn::Sub": "${EnvironmentName} Public Subnet (AZ2)"}
					}
				]
			}
		},
        "PrivateSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"AvailabilityZone": {"Fn::Select": [ "0", {"Fn::GetAZs": "us-west-2"} ]},
				"CidrBlock": {"Ref": "PrivateSubnet1CIDR"},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Fn::Sub": "${EnvironmentName} Private Subnet (AZ1)"}
					}
				]
			}
		},
	    "PrivateSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"AvailabilityZone": {"Fn::Select": [ "1", {"Fn::GetAZs": "us-west-2"} ]},
				"CidrBlock": {"Ref": "PrivateSubnet2CIDR"},
				"MapPublicIpOnLaunch": false,
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Fn::Sub": "${EnvironmentName} Private Subnet (AZ2)"}
					}
				]
			}
		},
	  
	  "NatGateway1EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": "vpc"
			}			
		},
	   "NatGateway2EIP": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"Domain": "vpc"
			}
		},
	   "NatGateway1": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": "NatGateway1EIP.AllocationId"},
				"SubnetId": {"Ref": "PublicSubnet1"},
				"Tags": [ {"Key": "Name", "Value": "NatG-PubSubnet1"} ]
			}
			
		},
		"NatGateway2": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {"Fn::GetAtt": "NatGateway2EIP.AllocationId"},
				"SubnetId": {"Ref": "PublicSubnet2"},
				"Tags": [ {"Key": "Name", "Value": "NatG-PubSubnet2"} ] 
			}
		
		},
		"PublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [ {"Key": "Name", "Value": "PublicRouteTable"} ] 
			}
		},
		"DefaultPublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "InternetGatewayAttachment",
			"Properties": {
				"RouteTableId": {"Ref": "PublicRouteTable"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {"Ref": "InternetGateway"}
			}
		},
		"PublicSubnet1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {"Ref": "PublicRouteTable"},
				"SubnetId": {"Ref": "PublicSubnet1"}
			}
		},
		"PublicSubnet2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {"Ref": "PublicRouteTable"},
				"SubnetId": {"Ref": "PublicSubnet2"}
			}
		},
		"PrivateRouteTable1": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Fn::Sub": "${EnvironmentName} Private Routes (AZ1)"}
					}
				]
			}
		},
		"DefaultPrivateRoute1": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {"Ref": "PrivateRouteTable1"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGateway1"}
			}
		},
		"PrivateSubnet1RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {"Ref": "PrivateRouteTable1"},
				"SubnetId": {"Ref": "PrivateSubnet1"}
			}
		},
		"PrivateRouteTable2": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {"Ref": "VPC"},
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Fn::Sub": "${EnvironmentName} Private Routes (AZ2)"}
					}
				]
			}
		},
		"DefaultPrivateRoute2": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {"Ref": "PrivateRouteTable2"},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {"Ref": "NatGateway2"}
			}
		},
		"PrivateSubnet2RouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {"Ref": "PrivateRouteTable2"},
				"SubnetId": {"Ref": "PrivateSubnet2"}
			}
		}
	},
	"Outputs" : {
			"VPC" : {
			"Description" : "This is to export VPC ID",
			"Value" :  { "Ref" : "VPC" },
			"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VPCID" }}
		    },
			"InternetGateway" : {
			"Description" : "This is to export InternetGateway ID",
			"Value" :  { "Ref" : "InternetGateway" },
			"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-IGWID" }}
		    },
			"PublicSubnet1" : {
			"Description" : "This is to export PublicSubnet1 ID",
			"Value" :  { "Ref" : "PublicSubnet1" },
			"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Pubnet1ID" }}
		    },
			"PublicSubnet2" : {
			"Description" : "This is to export PublicSubnet2 ID",
			"Value" :  { "Ref" : "PublicSubnet2" },
			"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Pubnet2ID" }}
		    },
			"PrivateSubnet1" : {
			"Description" : "This is to export PrivateSubnet1 ID",
			"Value" :  { "Ref" : "PrivateSubnet1" },
			"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Prvnet1ID" }}
		    },
			"PrivateSubnet2" : {
			"Description" : "This is to export PrivateSubnet2 ID",
			"Value" :  { "Ref" : "PrivateSubnet2" },
			"Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-Prvnet2ID" }}
		    }
			
		
	}
}
